@@ -1,6 +1,6 @@
 /***********************************************************************
  *
- * Copyright (C) 2007, 2008, 2010 Graeme Gott <graeme@gottcode.org>
+ * Copyright (C) 2007, 2008, 2010, 2012 Graeme Gott <graeme@gottcode.org>
  *
  * This program is free software: you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -54,10 +54,8 @@ Board::Board(QWidget* parent)
 	m_done(false),
 	m_paused(false)
 {
-#if !defined(QTOPIA_PHONE)
 	setMinimumSize(201, 401);
 	setFocusPolicy(Qt::StrongFocus);
-#endif
 	setFocus();
 
 	m_shift_timer = new QTimer(this);
@@ -495,10 +493,6 @@ QPixmap Board::renderPiece(int type) const
 			painter.drawRoundRect(piece[i].x * 20, piece[i].y * 20, 19, 19);
 		}
 	}
-
-#if defined(QTOPIA_PHONE)
-	result = result.scaled(30,50, Qt::KeepAspectRatio);
-#endif
 
 	return result;
 }
