@@ -19,12 +19,6 @@
 
 #include "window.h"
 
-#if defined(QTOPIA_PHONE)
-#include <QtopiaApplication>
-QTOPIA_ADD_APPLICATION(QTOPIA_TARGET,Window)
-QTOPIA_MAIN
-#else
-
 #include <QApplication>
 #include <QLocale>
 #include <QTranslator>
@@ -50,4 +44,3 @@ int main(int argc, char** argv)
 
 	return app.exec();
 }
-#endif
