@@ -1,3 +1,6 @@
+2012-05-29 Graeme Gott <graeme@gottcode.org>
+	* Remove Qtopia support.
+
 2010-10-02 Graeme Gott <graeme@gottcode.org>
 	* Tag version 1.0.4.
 
